# metadata-agent

./: .env.example  CLAUDE.md  METADATA_GENERATOR_SPEC.md  MILESTONES.md  Makefile  README.md  pyproject.toml
app/: classifier.py  config.py  main.py  queue.py
app/api/: assets.py  crawl.py  lineage.py  llm_calls.py
app/crawlers/: bigquery_crawler.py  git_crawler.py
app/lineage/: extractor.py  resolver.py
app/llm/: client.py  pricing.py  prompts.py  schemas.py
app/storage/: bq_store.py  local_cache.py
docs/: m10-llm-observability.md  m2-storage-layer.md  m3-bigquery-crawler-mcp.md  m6-edge-resolver.md  m7-async-job-queue.md  m8-streamlit-ui.md
mcp_server/: server.py
scripts/: init_bq_tables.py
tests/: ui_checklist.md
tests/fixtures/openai/: airflow_dag_spec.json  pyspark_stm.json  sql_stm.json
tests/integration/: test_end_to_end.py  test_git_crawler_integration.py
tests/unit/: test_bigquery_crawler.py  test_bq_store.py  test_classifier.py  test_crawl_api.py  test_git_crawler.py  test_health.py  test_job_queue.py  test_llm_extractor.py  test_llm_observability.py  test_local_cache.py  test_mcp_server.py  test_resolver.py
ui/: streamlit_app.py
